--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [pilotphish]
-description: [launchpad and mission control]
+description: [computer software consulting services]
